2000-05-15  Eli Zaretskii  <eliz@is.elta.co.il>

	* window.c (coordinates_in_window): Subtract 1 when computing
	right_x.

2000-05-15  Gerd Moellmann  <gerd@gnu.org>

	* Makefile.in (lisp): Add env.elc.

	* callproc.c (Fgetenv_internal): Renamed from Fgetenv.

2000-05-12  Gerd Moellmann  <gerd@gnu.org>

	* search.c (Freplace_match): Handle case of `\N' in the
	replacement when there's no group N.

2000-05-11  Gerd Moellmann  <gerd@gnu.org>

	* xdisp.c (add_to_log): Don't pass the terminating NUL byte
	of the message to message_dolog.

	* keyboard.c (read_char): Don't clear current message for help
	events; let the code handling help events handle this.  Change
	code detecting help events that should be ignored.

	* xdisp.c (handle_single_display_prop): Don't try to set PT if
	we're interating over a string.

2000-05-09  Dave Love  <fx@gnu.org>

	* fileio.c (Fwrite_region): If APPEND arg is an integer, seek to
	that offset before writing.  Move gcpro region past call of
	Ffile_regular_p.

2000-05-04  Dave Love  <fx@gnu.org>

	* buffer.c (syms_of_buffer) [auto-fill-function]: Doc fix.

2000-05-04  Gerd Moellmann  <gerd@gnu.org>

	* insdel.c (insert_from_buffer_1): Adjust FROM position by number
	of inserted characters when BUF equals the current buffer, and PT
	is in front of or equal to FROM.

2000-05-03  Gerd Moellmann  <gerd@gnu.org>

	* xdisp.c (handle_single_display_prop): If display property value
	is invalid, or something not supported on the frame, restore
	iterator's position to what it was initially.  Make sure to return
	0 for invalid and unsupported property values.

	* xterm.c (x_produce_glyphs) <composite chars>: Handle case
	that x_per_char_metric returns null.

2000-05-02  Gerd Moellmann  <gerd@gnu.org>

	* xterm.h (struct face): Add forward declaration.
	(struct image): Ditto.
	(image_ascent): Add prototype.

	* xterm.c (x_produce_image_glyph, x_draw_image_foreground)
	(x_draw_image_relief, x_draw_image_foreground_1): Call function